# ScanTrash

./: Panduan_Api_Backend.md  README.md  databasecode.txt  index.js  package-lock.json  package.json  tailwind.config.ts  update_minor_database.txt
src/: App.vue  firebase.ts  main.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs
src-tauri/src/handlers/: auth_handler.rs  local_log_handler.rs  log_handler.rs  mod.rs  pricelist_handler.rs  profile_handler.rs  scan_handler.rs
src-tauri/src/services/: auth_service.rs  local_log_service.rs  log_service.rs  mod.rs  pricelist_service.rs  profile_service.rs  session_service.rs
src/components/: ActionMenu.vue  BaseButton.vue  BottomNav.vue  Footer.vue  FooterAdmin.vue  Header.vue  LogoutButton.vue  ProfileInfo.vue  SideBarAdmin.vue  SideBarUser.vue
src/router/: index.ts
src/stores/: authStore.ts  scanStore.ts
src/types/: auth.ts
src/views/: AdminDashboard.vue  LoginView.vue  ScanView.vue  UserDashboard.vue
