[package]
name = "scantrash"
version = "0.1.0"
description = "Aplikasi Pendeteksi Nilai Jual Sebuah Sampah, Untuk Bank Sampah"
authors = ["Insos Tim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scantrash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
tauri-plugin-shell = "2.3.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
magic-crypt = "4.0.1"
dotenvy_macro = "0.15.7"
chrono = "0.4.44"
tokio = "1.50.0"

